force-app/main/default/objects/Account/fields/Opportunity_Create_Permission__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Create_Permission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Create Permission</label>
    <type>Checkbox</type>
</CustomField>