force-app/main/default/objects/Account/fields/Roll_Up_Contact__c.field-meta.xml
<CustomField>
    <fullName>Roll_Up_Contact__c</fullName>
    <label>Roll Up Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>