force-app/main/default/objects/Account/validationRules/Field_Must_Be_Full.validationRule-meta.xml
<ValidationRule>
    <fullName>Field_Must_Be_Full</fullName>
    <active>true</active>
    <description>Select pick Value</description>
    <errorConditionFormula>AND(ISBLANK(AccountNumber),NOT(ISNEW())   )</errorConditionFormula>
    <errorDisplayField>AccountNumber</errorDisplayField>
    <errorMessage>Enter Account Number</errorMessage>
</ValidationRule>