force-app/main/default/objects/Account/listViews/Channel_Customers.listView-meta.xml
<ListView>
    <fullName>Channel_Customers</fullName>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>CustomerPriority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Customer - Channel</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Billing State/Province equals WA,OR,CA.</value>
    </filters>
    <label>Channel Customers</label>
</ListView>